--- a/dunder_mifflin_book_club/Gemfile
+++ b/dunder_mifflin_book_club/Gemfile
@@ -44,6 +44,8 @@ gem 'bootstrap', '~> 4.3.1'
 gem 'bootstrap-datepicker-rails'
 gem 'material_icons'
 
+gem 'devise'
+
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
