--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .env
+# Ignore bundler config.
+/.bundle
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
+# Ignore all logfiles and tempfiles.
+/log/*
+!/log/.keep
+/tmp
+
+# Ignore uploaded test images.
+/public/uploads
